[tool.poetry]
name = "bot-assistance"
version = "0.1.0"
description = ""
authors = ["SERHII MELNYK <melser68@i.ua>"]
readme = "README.md"
#packages = [{include = "bot_assistance"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
