[tool.poetry]
name = "bot-assistance"
version = "0.1.0"
description = ""
authors = ["SERHII MELNYK <melser68@i.ua>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
py7zr = "0.20.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
